# aoc21

./: .gitignore  Cargo.toml
aoc/: Cargo.toml
aoc/src/: day1.rs  day2.rs  day3.rs  lib.rs  main.rs
aoc/src/ui/: app.rs  layout.rs  mod.rs  threadpool.rs
aoc/src/ui/widget/: daylist.rs  mod.rs
aoc_derive/: Cargo.toml
aoc_derive/src/: lib.rs
aoc_derive/src/days/: analyze.rs  codegen.rs  mod.rs  parse.rs
