[package]
edition = "2021"
name = "aoc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_derive = {path = "../aoc_derive/"}
clap = "2.33.3"
color-eyre = "0.5.11"
crossterm = "0.22"
itertools = "0.10.1"
tracing = "0.1.29"
tracing-subscriber = {version = "0.3.2", features = ["env-filter"]}

[dependencies.tui]
default-features = false
features = ["crossterm", "termion"]
version = "0.16.0"

[target.'cfg(target_os = "linux")'.dependencies]
termion = "1.5.6"